[gd_scene load_steps=9 format=3 uid="uid://btrkguy8k3bw5"]

[ext_resource type="Texture2D" uid="uid://dm4wnrieghc43" path="res://assets/tilesets/tileset_door.png" id="1_e8rys"]
[ext_resource type="Script" path="res://scripts/door.gd" id="1_o60eo"]
[ext_resource type="Texture2D" uid="uid://xy57j8xpjbb6" path="res://assets/2d_lights_and_shadows_neutral_point_light.webp" id="3_a5ppk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y823b"]
atlas = ExtResource("1_e8rys")
region = Rect2(0, 0, 32, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdlt0"]
atlas = ExtResource("1_e8rys")
region = Rect2(32, 0, 32, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_pb1d7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y823b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdlt0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpkys"]
size = Vector2(91.5, 84.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7bou1"]
size = Vector2(20, 24)

[node name="Door" type="Node2D"]
script = ExtResource("1_o60eo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pb1d7")
frame = 1

[node name="OpenLight" type="PointLight2D" parent="."]
visible = false
position = Vector2(0, 8)
shadow_enabled = true
texture = ExtResource("3_a5ppk")

[node name="ClosedLight" type="PointLight2D" parent="."]
position = Vector2(-6, 10)
scale = Vector2(0.445313, 0.445313)
color = Color(0.964706, 0.839216, 0.741176, 1)
shadow_enabled = true
texture = ExtResource("3_a5ppk")
texture_scale = 0.47

[node name="OpenArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpenArea"]
shape = SubResource("RectangleShape2D_fpkys")

[node name="EnterArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnterArea"]
position = Vector2(0, 12)
shape = SubResource("RectangleShape2D_7bou1")

[connection signal="body_entered" from="OpenArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="EnterArea" to="." method="_on_enter_area_body_entered"]
